[package]
name = "mymacros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "*"
serde = "*"
log = "*"

[dev-dependencies]
env_logger = "*"
reqwest = "*"
tokio = { version = "*", features = ["rt", "macros"] }
anyhow = "*"